--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./app.css" />
-    <title>Gqtoraid's Home Page</title>
+    <title>Bedlessly's Home Page</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-          <a class="navbar-brand" href="#">Gqtoraid</a>
+          <a class="navbar-brand" href="#">Bedlessly</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -44,7 +44,7 @@
     </header>
 	<br />
 	<div class="container">
-		<h3>Welcome To Gqtoraid's Website!</h3>
+		<h3>Welcome To Bedlessly's Website!</h3>
 		<hr />
 		<p>
 			I make gaming video's, coding video's and loads of other things! I love to play Minecraft and
