--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./app.css" />
-    <title>Gqtoraid's About Page</title>
+    <title>Bedlessly's About Page</title>
   </head>
   <body>
     <header>
@@ -44,7 +44,7 @@
     </header>
 	<br />
 	<div class="container">
-		<h3>About Gqtoraid</h3>
+		<h3>About Bedlessly</h3>
 		<hr />
 		<p>To be added...</p>
 	</div>
