--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Gqtoraid</a>
+          <a class="navbar-brand" href="index.html">Bedlessly</a>
           <button
             class="navbar-toggler"
             type="button"
