--- a/about.html
+++ b/about.html
@@ -14,40 +14,13 @@
     <title>Bedlessly's About Page</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Bedlessly</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbar"
-            aria-controls="navbar"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-	<br />
-	<div class="container">
-		<h3>About Bedlessly</h3>
-		<hr />
-		<p>To be added...</p>
-	</div>
+    <header id="header"></header>
+    <br />
+    <div class="container">
+      <h3>About Bedlessly</h3>
+      <hr />
+      <p>To be added...</p>
+    </div>
 
     <!-- Scripts -->
     <!--
@@ -68,4 +41,5 @@
     ></script>
     -->
   </body>
+  <script src="./app.js"></script>
 </html>
