--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./app.css" />
+    <link rel="stylesheet" href="./css/app.css" />
     <title>Bedlessly's About Page</title>
   </head>
   <body>
@@ -19,7 +19,13 @@
     <div class="container">
       <h3>About Bedlessly</h3>
       <hr />
-      <p>To be added...</p>
+      <p>
+        YouTube Channel:
+        <a href="https://www.youtube.com/channel/UC8XJzRwEp698NUau4Q7__yw"
+          >Check it out!</a
+        >
+      </p>
+      <p>My GitHub: <a href="https://github.com/Bedlessly">Click Here!</a></p>
     </div>
 
     <!-- Scripts -->
@@ -41,5 +47,5 @@
     ></script>
     -->
   </body>
-  <script src="./app.js"></script>
+  <script src="./js/app.js"></script>
 </html>
