--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./app.css" />
+    <link rel="stylesheet" href="./css/app.css" />
     <title>Bedlessly's Home Page</title>
   </head>
   <body>
     <header id="header"></header>
     <br />
     <div class="container">
+      <div class="alert alert-primary">
+        Go checkout my <a href="./videos.html">videos</a>
+      </div>
       <h3>Welcome To Bedlessly's Website!</h3>
       <hr />
       <p>
@@ -24,6 +27,7 @@
         to play Minecraft and watch youtube alot... I know how to code in Java,
         Javascript, Python, and HTML!
       </p>
+      <br />
     </div>
 
     <!-- Scripts -->
@@ -44,6 +48,6 @@
       crossorigin="anonymous"
     ></script>
     -->
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
