nanoproduction's changes + rebrand to Chazi

--- a/about.html
+++ b/about.html
@@ -10,44 +10,23 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./app.css" />
-    <title>Bedlessly's About Page</title>
+    <link rel="stylesheet" href="./css/app.css" />
+    <title>Chazi's About Page</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Bedlessly</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbar"
-            aria-controls="navbar"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-	<br />
-	<div class="container">
-		<h3>About Bedlessly</h3>
-		<hr />
-		<p>To be added...</p>
-	</div>
+    <header id="header"></header>
+    <br />
+    <div class="container">
+      <h3>About Chazi</h3>
+      <hr />
+      <p>
+        YouTube Channel:
+        <a href="https://www.youtube.com/channel/UC8XJzRwEp698NUau4Q7__yw"
+          >Check it out!</a
+        >
+      </p>
+      <p>My GitHub: <a href="https://github.com/Chazi">Click Here!</a></p>
+    </div>
 
     <!-- Scripts -->
     <!--
@@ -68,4 +47,5 @@
     ></script>
     -->
   </body>
+  <script src="./js/app.js"></script>
 </html>
