--- a/index.html
+++ b/index.html
@@ -10,47 +10,25 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./app.css" />
-    <title>Bedlessly's Home Page</title>
+    <link rel="stylesheet" href="./css/app.css" />
+    <title>Chazi's Home Page</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-          <a class="navbar-brand" href="#">Bedlessly</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbar"
-            aria-controls="navbar"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-	<br />
-	<div class="container">
-		<h3>Welcome To Bedlessly's Website!</h3>
-		<hr />
-		<p>
-			I make gaming video's, coding video's and loads of other things! I love to play Minecraft and
-			watch youtube alot... I know how to code in Java, Javascript, Python, and HTML!
-		</p>
-	</div>
+    <header id="header"></header>
+    <br />
+    <div class="container">
+      <div class="alert alert-primary">
+        Go checkout my <a href="./videos.html">videos</a>
+      </div>
+      <h3>Welcome To Chazi's Website!</h3>
+      <hr />
+      <p>
+        I make gaming video's, coding video's and loads of other things! I love
+        to play Minecraft and watch youtube alot... I know how to code in Java,
+        Javascript, Python, and HTML!
+      </p>
+      <br />
+    </div>
 
     <!-- Scripts -->
     <!--
@@ -70,5 +48,6 @@
       crossorigin="anonymous"
     ></script>
     -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
