--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
           >Check it out!</a
         >
       </p>
-      <p>My GitHub: <a href="https://github.com/Chazi">Click Here!</a></p>
+      <p>My GitHub: <a href="https://github.com/Chaziei">Click Here!</a></p>
     </div>
 
     <!-- Scripts -->
